Changes related to SFDCAU-655

--- a/src/main/metadata-au/classes/EmailServiceStatusUpdate.cls
+++ b/src/main/metadata-au/classes/EmailServiceStatusUpdate.cls
@@ -64,8 +64,9 @@ system.debug('email==================='+email);
             //lead status pick list value
             Set<String> STATUS_PICKLIST = getPicklistValues('Lead__c','CAC_Lead_Status__c');
 
-            if(STATUS_PICKLIST.contains(params[1])){
-                updateObj.CAC_Lead_Status__c= params[1];
+            string params1=params[1].replace('+', ' ');
+            if(STATUS_PICKLIST.contains(params1)){
+                updateObj.CAC_Lead_Status__c= params1;
             }else{
                  return makeErrorResult();
             }
@@ -76,9 +77,10 @@ system.debug('email==================='+email);
                 updateObj.Description__c += '\r\n' + email.plainTextBody;
             }
             
-            if(params.size()>2){
-                if(LOST_REASON_PICKLIST.contains(params[2])){
-                    updateObj.CAC_Lost_Reason__c= params[2];
+            if(params.size()>2){ 
+			    string params2=params[2].replace('+', ' ');
+                if(LOST_REASON_PICKLIST.contains(params2)){
+                    updateObj.CAC_Lost_Reason__c= params2;
                 }else{
                     return makeErrorResult();
                 }
