--- a/src/main/metadata-au/classes/ContactTriggerHandler.cls
+++ b/src/main/metadata-au/classes/ContactTriggerHandler.cls
@@ -43,6 +43,7 @@ public class ContactTriggerHandler
             // Validate complaint manager and presales
             ContactHelper.ValidateManager(Trigger.new);
             ContactHelper.ValidateBusinessUnit(Trigger.new);
+            ContactHelper.validateAccount(trigger.new,(Map<Id,Contact>)Trigger.newMap,(Map<Id,Contact>)Trigger.oldMap);
         }
         
                      
