Changes related to SFDCAU-655

--- a/src/main/metadata-au/classes/MakeUpdateLinkControl.cls
+++ b/src/main/metadata-au/classes/MakeUpdateLinkControl.cls
@@ -1,6 +1,15 @@
-public class MakeUpdateLinkControl {
+public class MakeUpdateLinkControl { 
+
+public String CustomerCareEmail{set; get;}
+   
+public MakeUpdateLinkControl (){
+CustomerCareEmail = UtilConstant.ORGWIDE_EMAIL_ADDRESS_DEFAULT;
+
+}
 
     
+
+
     private static string QUERY_SQL = ' '+
                                       'Select e.LocalPart,e.FunctionId, e.EmailDomainName ' +
                                       'From EmailServicesAddress e ' +
@@ -8,7 +17,13 @@ public class MakeUpdateLinkControl {
                                       '( select id from EmailServicesFunction where IsActive = true  and FunctionName = \'EocStatus Update\')' +
                                       'and IsActive = true';
 
-    public String getLeadId() {
+    public String getLeadId() { 
+        return null;
+    }
+       
+        
+    
+    public String getLeadName() { 
         return null;
     }
 
