--- a/src/main/metadata-au/classes/lead_Addresscontroller.cls
+++ b/src/main/metadata-au/classes/lead_Addresscontroller.cls
@@ -236,6 +236,11 @@ public String getworkPhone(){
               
        return null;
    } 
+    
+    Public Pagereference UpdateAddress(){
+    	update addr;
+        return null;
+    }
          
       
 }
