--- a/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
@@ -35,19 +35,20 @@ implements TriggerHandlerIf
         {
             serializedObject=json.serialize(ListAccNew);
             AccountHelperJP.createUCID(Trigger.new,trigger.isInsert);
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('INSERT',ListAccNew[0].Id,serializedObject);
         } 
         if(isAfter && isUpdate && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('UPDATE',ListAccNew[0].Id,serializedObject);
         }
         
         if(isAfter && isDelete && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccOld);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('DELETE',ListAccOld[0].Id,serializedObject);
         }
     }
@@ -72,17 +73,20 @@ implements TriggerHandlerIf
         if(isAfter && isInsert && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('INSERT',ListAccNew[0].Id,serializedObject);
         } 
         if(isAfter && isUpdate && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('UPDATE',ListAccNew[0].Id,serializedObject);
         }
         
         if(isAfter && isDelete && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccOld);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AccountHelperJP.entityNotifyUpdate('DELETE',ListAccOld[0].Id,serializedObject);
         }
     }
