--- a/src/main/metadata/classes/TriggerAddressTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerAddressTriggerHandlerJP.cls
@@ -29,20 +29,21 @@ public class TriggerAddressTriggerHandlerJP implements TriggerHandlerIf
         if(isAfter && isInsert)
         {
             serializedObject=json.serialize(ListAddNew);
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             
             AddressHelperJP.entityNotifyUpdate('INSERT',ListAddNew[0].Id,serializedObject);
         } 
         if(isAfter && isUpdate)
         {
             serializedObject=json.serialize(ListAddNew);
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AddressHelperJP.entityNotifyUpdate('UPDATE',ListAddNew[0].Id,serializedObject);
         }
         
         if(isAfter && isDelete)
         {
             serializedObject=json.serialize(ListAddOld);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AddressHelperJP.entityNotifyUpdate('DELETE',ListAddOld[0].Id,serializedObject);
         }
         
@@ -56,19 +57,20 @@ public class TriggerAddressTriggerHandlerJP implements TriggerHandlerIf
         {
             serializedObject=json.serialize(ListAddNew);
             
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AddressHelperJP.entityNotifyUpdate('INSERT',ListAddNew[0].Id,serializedObject);
         } 
         if(isAfter && isUpdate)
         {
             serializedObject=json.serialize(ListAddNew);
-            
+            serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AddressHelperJP.entityNotifyUpdate('UPDATE',ListAddNew[0].Id,serializedObject);
         }
         
         if(isAfter && isDelete)
         {
             serializedObject=json.serialize(ListAddOld);
+			serializedObject = EncodingUtil.URLENCODE(serializedObject,'UTF-8');
             AddressHelperJP.entityNotifyUpdate('DELETE',ListAddOld[0].Id,serializedObject);
         }
         
