Changes Related to SFDCAU-736,SFDCAU-734

--- a/src/main/metadata-au/classes/LeadProductDetailsInputController.cls
+++ b/src/main/metadata-au/classes/LeadProductDetailsInputController.cls
@@ -1,7 +1,9 @@
 public with sharing class LeadProductDetailsInputController
 {   
     public List<wrappermultibrandclass> wrapperlist = new List<wrappermultibrandclass>();
+    public set<string> carmodelset = new set<string>();
     Public list<Car_Model__c> carmodellist;
+    Public list<string> carmodelstrng = new list<string>();
     Public list<Lead_Product__c> leadproductllist=new list<Lead_Product__c>();
     Public map<id,Lead_Product__c> mapupdateleadllist=new map<id,Lead_Product__c>();
     public map<id,string> oldleaditems = new map<id,string>();
@@ -10,13 +12,14 @@ public with sharing class LeadProductDetailsInputController
     
     public LeadProductDetailsInputController(ApexPages.StandardController controller)
     {
+		//Test
         //controller.addFields(new List<string>{'Id','Lead_Items__c'});
         //lead = (Lead__c)controller.getRecord();
         //system.debug('lead t^$%$%$%$'+lead);
         wrappermultibrandclass wrapper = new wrappermultibrandclass();
         wrapper.vehiclebrand = '';
         wrapper.vechmodel = '';
-        wrapper.vechquanty = '';
+        wrapper.vechquanty = 'Mercedez Benz';
         wrapperlist.add(wrapper);
     }
     public class wrappermultibrandclass
@@ -29,14 +32,23 @@ public with sharing class LeadProductDetailsInputController
         
     public list<List<SelectOption>> getbrands()
     {
-        carmodellist = [select name from Car_Model__c];
+        carmodellist = [select model__c from Car_Model__c where vehicle_group__c = 'Van'];
+        for(Car_Model__c card :carmodellist)
+        {
+            if(card.model__c != null && card.model__c != '')
+            {
+                carmodelset.add(card.model__c);
+            }                        
+        }
+        system.debug('Car Model*****' + carmodellist.get(0).model__c);
+        carmodelstrng.addAll(carmodelset);
         List<list<SelectOption>> optionslist = new list<List<SelectOption>>();
         List<SelectOption> options = new List<SelectOption>();
         integer counter=0;
-        for(integer i=0;i<carmodellist.size();i++)
+        for(integer i=0;i<carmodelstrng.size();i++)
         {           
-            options.add(new selectoption(carmodellist[i].Name,carmodellist[i].Name));
-            if(counter==999 || i==carmodellist.size()-1){
+            options.add(new selectoption(carmodelstrng[i],carmodelstrng[i]));
+            if(counter==999 || i==carmodelstrng.size()-1){
                 optionslist.add(options);
                 options =new List<SelectOption>();
                 counter=-1;
@@ -51,7 +63,7 @@ public with sharing class LeadProductDetailsInputController
         wrappermultibrandclass wrapper = new wrappermultibrandclass();
         wrapper.vehiclebrand ='';
         wrapper.vechmodel = '';
-        wrapper.vechquanty = '';        
+        wrapper.vechquanty = 'Mercedez Benz';        
         if(wrapperlist.size() <10)
         {
             wrapperlist.add(wrapper);
